tests/fixtures/coflow/invalid/lex/invalid-number-separator.cf
a = 1_
b = 1__0
c = 0x_ff
d = 1_.0
e = 1.0_
